sshme-in/apps/kresus/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kresus-route
  annotations:
    gethomepage.dev/href: "https://kresus.sshme.in"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Finance App
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: https://www.getoutline.com/images/logo.svg
    gethomepage.dev/app: kresus-route
    gethomepage.dev/name: Kresus
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-ingress
  hostnames:
  - "kresus.sshme.in"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kresus
      port: 80
